--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="_0dp">0dp</dimen>
     <dimen name="_50dp">50dp</dimen>
+    <dimen name="_30sp">30sp</dimen>
+    <dimen name="_18sp">18sp</dimen>
 </resources>
