--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="_50dp">50dp</dimen>
     <dimen name="_30sp">30sp</dimen>
     <dimen name="_18sp">18sp</dimen>
+    <dimen name="_60sp">60sp</dimen>
 </resources>
