--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -5,5 +5,6 @@
         android:angle="30"
         android:startColor="#9B90DD"
         android:endColor="#31C4F1"
+        android:gradientRadius="@dimen/_50dp"
         android:type="linear" />
 </shape>
