--- a/app/src/main/res/layout/activity_intro_screen.xml
+++ b/app/src/main/res/layout/activity_intro_screen.xml
@@ -22,7 +22,7 @@
         android:layout_height="@dimen/_50dp"
         app:tabGravity="center"
         android:background="#00000000"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="@dimen/_10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
