--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="_30sp">30sp</dimen>
     <dimen name="_18sp">18sp</dimen>
     <dimen name="_60sp">60sp</dimen>
+    <dimen name="_20dp">20dp</dimen>
+    <dimen name="_100dp">100dp</dimen>
+    <dimen name="_40dp">40dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
 </resources>
