--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,10 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="PrimaryButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">@dimen/_18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/intro_2_blue</item>
+    </style>
 </resources>
