--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,17 @@
 <resources>
     <dimen name="_0dp">0dp</dimen>
     <dimen name="_50dp">50dp</dimen>
-    <dimen name="_30sp">30sp</dimen>
+    <dimen name="intro_title">25sp</dimen>
     <dimen name="_18sp">18sp</dimen>
     <dimen name="_60sp">60sp</dimen>
     <dimen name="_20dp">20dp</dimen>
     <dimen name="_100dp">100dp</dimen>
     <dimen name="_40dp">40dp</dimen>
     <dimen name="_10dp">10dp</dimen>
+    <dimen name="intro_detail">18sp</dimen>
+    <dimen name="login_signup_banner_size">80dp</dimen>
+    <dimen name="login_signup_banner_text_size">30sp</dimen>
+    <dimen name="_60dp">60dp</dimen>
+    <dimen name="_15sp">15sp</dimen>
+    <dimen name="_5dp">5dp</dimen>
 </resources>
