--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.EcommerceApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.EcommerceApp" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.EcommerceApp" parent="Base.Theme.EcommerceApp" />
+
+    <style name="PrimaryButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">@dimen/_18sp</item>
+        <item name="android:textColor">@color/white</item>
+<!--        <item name="android:backgroundTint">@null</item>-->
+        <item name="backgroundTint">@color/intro_2_blue</item>
+    </style>
+
+    <style name="StaticText" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/_15sp</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
 </resources>
