adding remote api call to login

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -86,6 +86,7 @@
         android:backgroundTint="@color/white"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_sign_in"
         android:layout_margin="@dimen/_20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
-        android:id="@+id/btn_sign_up"
+        android:id="@+id/btn_jump_to_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/i_don_t_have_an_account"
