add home screen for categories

--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<group android:checkableBehavior="single">
     <item
-        android:id="@+id/home"
+        android:id="@+id/app_home"
         android:title="@string/home" />
     <item
         android:id="@+id/cart"
@@ -16,5 +16,6 @@
     <item
         android:id="@+id/logout"
         android:title="@string/logout" />
+</group>
 
 </menu>
