--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="_60dp">60dp</dimen>
     <dimen name="_15sp">15sp</dimen>
     <dimen name="_5dp">5dp</dimen>
+    <dimen name="_160dp">160dp</dimen>
+    <dimen name="_200dp">200dp</dimen>
 </resources>
