--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,12 +10,24 @@
     <style name="PrimaryButton" parent="Widget.AppCompat.Button">
         <item name="android:textSize">@dimen/_18sp</item>
         <item name="android:textColor">@color/white</item>
-<!--        <item name="android:backgroundTint">@null</item>-->
         <item name="backgroundTint">@color/intro_2_blue</item>
+    </style>
+
+    <style name="AddToCartButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">@dimen/_10sp</item>
+        <item name="android:textColor">@color/intro_3_orange</item>
+        <item name="backgroundTint">@color/white</item>
     </style>
 
     <style name="StaticText" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">@dimen/_15sp</item>
         <item name="android:textColor">@color/gray</item>
     </style>
+
+    <style name="ProductTitle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/_15sp</item>
+        <item name="android:textColor">@color/intro_3_orange</item>
+    </style>
+
+    <dimen name="_10sp">10sp</dimen>
 </resources>
