--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_160dp">160dp</dimen>
     <dimen name="_200dp">200dp</dimen>
+    <dimen name="_12sp">12sp</dimen>
 </resources>
