completing product detail screen

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="_160dp">160dp</dimen>
     <dimen name="_200dp">200dp</dimen>
     <dimen name="_12sp">12sp</dimen>
+    <dimen name="_150dp">150dp</dimen>
 </resources>
