--- a/app/src/main/res/layout/specification_item.xml
+++ b/app/src/main/res/layout/specification_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="@dimen/_10dp"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_50dp">
+    android:layout_height="wrap_content">
 
     <TextView
+        android:padding="@dimen/_5dp"
         android:id="@+id/tv_specification_title"
-        android:layout_width="@dimen/_0dp"
-        android:layout_height="@dimen/_0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/specification_name"
         android:textSize="@dimen/_12sp"
@@ -18,10 +20,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:padding="@dimen/_5dp"
         android:id="@+id/tv_specification_description"
         android:textSize="@dimen/_12sp"
-        android:layout_width="@dimen/_0dp"
-        android:layout_height="@dimen/_0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/specification_description"
         app:layout_constraintBottom_toBottomOf="parent"
