--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="_200dp">200dp</dimen>
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_150dp">150dp</dimen>
+    <dimen name="_30dp">30dp</dimen>
 </resources>
