--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -32,5 +32,14 @@
         <item name="android:textSize">@dimen/_20dp</item>
         <item name="android:textColor">@color/intro_3_orange</item>
     </style>
+    <style name="ProductTitle3" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/_25sp</item>
+        <item name="android:textColor">@color/intro_3_orange</item>
+    </style>
+    <style name="CartTitle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/_25sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center</item>
+    </style>
 
 </resources>
