--- a/app/src/main/res/layout/fragment_cart_preview.xml
+++ b/app/src/main/res/layout/fragment_cart_preview.xml
@@ -18,6 +18,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/tv_total_price"
         style="@style/ProductTitle3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
         app:layout_constraintGuide_percent="0.1"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_checkout"
         style="@style/PrimaryButton"
         android:padding="@dimen/_20dp"
         android:layout_width="wrap_content"
