--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,6 @@
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_150dp">150dp</dimen>
     <dimen name="_30dp">30dp</dimen>
+    <dimen name="_3dp">3dp</dimen>
+    <dimen name="_1dp">1dp</dimen>
 </resources>
