--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/checkout_container"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.fragment.checkout.CheckOutFragment">
     <com.google.android.material.tabs.TabLayout
