--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -14,6 +14,9 @@
         android:id="@+id/profile"
         android:title="@string/profile" />
     <item
+        android:id="@+id/change_theme"
+        android:title="change_theme" />
+    <item
         android:id="@+id/logout"
         android:title="@string/logout" />
 </group>
